--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li><a href="#service">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <a href="/Sabarinathan.pdf" download class="top-btn">Download CV</a>
+        <a href="/sabari.pdf" download class="top-btn">Download CV</a>
         <img src="/moon.png" id="icon">
     </header>
     <section class="home" id="home">
